<resources>
    <string name="phone_number">Phone Number</string>
    <string name="login">Login</string>
    <string name="login_mysabay">Login with MySabay</string>
    <string name="confirm_otp">Confirm otp</string>
    <string name="enter_the_otp_that_you_have_received_via_text_message">Enter the OTP that you have received via text message</string>
    <string name="confirm">Confirm</string>
    <string name="resend_otp"><u>Resend OTP</u></string>
    <string name="label_close">Close</string>
    <string name="ok">OK</string>
    <string name="msg_has_connected_internet">The Internet is reconnected</string>
    <string name="msg_can_not_connect_internet">Unable to connect to the Internet</string>
    <string name="msg_can_not_connect_server">Unable to communicate with the server, please try again</string>
    <string name="msg_no_data">No data</string>
    <string name="title_retry">Retry</string>
    <string name="msg_phone_incorrect">your phone number format is incorrect</string>
    <string name="msg_input_phone">Input phone number</string>
    <string name="verify_code_required">verify code is required</string>
    <string name="pay">pay</string>
    <string name="shops">Shops</string>
    <string name="total_s">Total: %s</string>
    <string name="payment_options">Payment Options</string>
    <string name="upgrade_google_play">In-app billing service is unavailable, please upgrade Google Play</string>
    <string name="select_a_partner_bank">Select a partner bank</string>
    <string name="mysabay">MySabay</string>
    <string name="please_choose_payment_option">Please choose payment options</string>
    <string name="cancel">Cancel</string>
    <string name="payment_confirmation">Payment Confirmation</string>
    <string name="are_you_pay_with_my_sabay_provider">Are you sure you want to pay %s SC through Mysabay Payment Provider?</string>
    <string name="partnered_payment_providers">partnered payment providers</string>
    <string name="select_a_partnered_payment_provider_fro_pre_authorization">Select a partnered payment provider for pre-authorization.</string>
</resources>
