<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorBackground"
                app:srcCompat="@drawable/abc_vector_test" />
        </androidx.appcompat.widget.Toolbar>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/appCompatTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/confirm_otp"
                android:textAllCaps="true"
                android:textAppearance="@style/BaseAppearanceTitle.MyAppearanceTitle"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:textAllCaps="true" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_show_otp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/enter_the_otp_that_you_have_received_via_text_message"
                android:textAppearance="@style/BaseAppearanceTitle.MyAppearanceTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appCompatTextView" />

            <com.alimuzaffar.lib.pin.PinEntryEditText
                android:id="@+id/appCompatEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:cursorVisible="false"
                android:digits="1234567890"
                android:inputType="number"
                android:maxLength="4"
                android:textAppearance="@style/BaseAppearanceTitle.MyAppearanceTitle"
                android:textIsSelectable="false"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_show_otp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_resend_otp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resend_otp"
                app:layout_constraintBottom_toBottomOf="@+id/btn_login_mysabay"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appCompatEditText" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login_mysabay"
                style="@style/ButtonPrimary"
                android:layout_width="wrap_content"
                android:gravity="center"
                android:paddingStart="@dimen/padding_35"
                android:paddingEnd="@dimen/padding_35"
                android:text="@string/confirm"
                android:textAppearance="@style/MyAppearanceBody1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appCompatEditText" />

            <include
                layout="@layout/rc_view_empty"
                android:visibility="gone" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>
