<?xml version="1.0" encoding="utf-8"?>
<layout>

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/view_main_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        tools:context=".ui.activity.LoginActivity">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/img_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_mysabay" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="272dp" />

        <android.support.v7.widget.LinearLayoutCompat
            android:id="@+id/view_login"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_my_sabay_app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/padding_35"
                android:textAllCaps="true"
                android:textAppearance="@style/BaseAppearanceTitle.MyAppearanceTitle"
                android:textStyle="bold"
                app:textAllCaps="true" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txt_input_phone"
                style="@style/SdkAppTheme.MyStyleOutlineBox"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/padding_35"
                android:focusedByDefault="true"
                android:gravity="center"
                android:hint="@string/phone_number"
                app:boxStrokeColor="@color/text_input_bg"
                app:hintTextAppearance="@style/MyAppearanceBody1.Primary">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edt_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:fontFamily="@font/font_battambang_regular"
                    android:inputType="phone"
                    android:singleLine="true"
                    android:textColor="@color/colorYellow"
                    android:textCursorDrawable="@null"
                    app:hintTextAppearance="@style/MyAppearanceBody1.Primary" />
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_login"
                style="@style/ButtonPrimary"
                android:layout_width="200dp"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/padding_10"
                android:fontFamily="@font/font_battambang_regular"
                android:gravity="center"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/login"
                android:textAppearance="@style/MyAppearanceBody1" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_login_mysabay"
                style="@style/ButtonPrimary"
                android:layout_width="200dp"
                android:layout_gravity="center"
                android:fontFamily="@font/font_battambang_regular"
                android:gravity="center"
                android:text="@string/login_mysabay"
                android:textAppearance="@style/MyAppearanceBody1" />

        </android.support.v7.widget.LinearLayoutCompat>

        <include
            android:id="@+id/view_empty"
            layout="@layout/view_empty" />

    </android.support.constraint.ConstraintLayout>
</layout>